Fixes a few UI bugs on smaller screens
adds border color for inputs

--- a/src/app/layout/agreement/components/add-edit-agreement/add-edit-agreement.component.scss
+++ b/src/app/layout/agreement/components/add-edit-agreement/add-edit-agreement.component.scss
@@ -99,3 +99,9 @@ a {
   font-size: 0.875rem;
   /* Match Bootstrap small text size */
 }
+
+.form-group > input, .form-group > select, .form-check > input {
+  border-color: #1a1a1a7d;
+  border-width: 1px;
+}
+
